# qru-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
demos/: QRU_PennyLane_Community_Demo.ipynb
examples/: classification_ce_fast.py  classification_threshold.py  classification_threshold_fast.py  regression_sine.py  regression_sine_noisy.py  regression_sine_qbraid.py  regression_zscore_scaled.py  verify_p001_g001_multi_seed.py
qru/: __init__.py  noise_protocol.md  qru_pennylane.py
qru_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: noise_qru.csv  noise_qru_p001_g001_seeds.csv
tests/: test_shapes.py  test_training_step.py
